--- a/css/styles.css
+++ b/css/styles.css
@@ -1016,11 +1016,11 @@ button {
     }
     
     .hero__media-main {
-        width: 92%;
-        max-width: 100%;
+        width: 75%;
+        max-width: 320px;
         height: auto;
-        min-height: 250px;
-        max-height: 320px;
+        min-height: 200px;
+        max-height: 240px;
         left: 50%;
         transform: translateX(-50%) scale(1) !important;
         bottom: 4%;
@@ -1032,8 +1032,8 @@ button {
     .hero__main-img {
         width: 100%;
         height: 100%;
-        min-height: 250px;
-        max-height: 320px;
+        min-height: 200px;
+        max-height: 240px;
         object-fit: cover;
         border-radius: var(--radius-xl);
         display: block;
@@ -1112,16 +1112,18 @@ button {
 /* Móviles pequeños (iPhone mini, Android pequeños) - 391px a 480px */
 @media screen and (min-width: 391px) and (max-width: 480px) {
     .hero__media-main {
-        width: 92%;
-        max-height: 300px;
-        min-height: 250px;
-        bottom: 6%;
+        width: 70%;
+        max-width: 280px;
+        max-height: 220px;
+        min-height: 180px;
+        bottom: 5%;
+        transform: translateX(-50%) scale(1) !important;
     }
     
     .hero__main-video,
     .hero__main-img {
-        max-height: 300px;
-        min-height: 250px;
+        max-height: 220px;
+        min-height: 180px;
     }
     
     .hero__content {
@@ -1133,16 +1135,18 @@ button {
 /* Móviles medianos (iPhone estándar, Android medianos) - 481px a 576px */
 @media screen and (min-width: 481px) and (max-width: 576px) {
     .hero__media-main {
-        width: 90%;
-        max-height: 320px;
-        min-height: 280px;
+        width: 75%;
+        max-width: 300px;
+        max-height: 240px;
+        min-height: 200px;
         bottom: 5%;
+        transform: translateX(-50%) scale(1) !important;
     }
     
     .hero__main-video,
     .hero__main-img {
-        max-height: 320px;
-        min-height: 280px;
+        max-height: 240px;
+        min-height: 200px;
     }
     
     .hero__content {
@@ -1153,17 +1157,18 @@ button {
 /* Móviles grandes y tablets pequeñas (iPhone Plus, Android grandes) - 577px a 768px */
 @media screen and (min-width: 577px) and (max-width: 768px) {
     .hero__media-main {
-        width: 85%;
-        max-width: 500px;
-        max-height: 380px;
-        min-height: 320px;
-        bottom: 6%;
+        width: 70%;
+        max-width: 350px;
+        max-height: 280px;
+        min-height: 240px;
+        bottom: 5%;
+        transform: translateX(-50%) scale(1) !important;
     }
     
     .hero__main-video,
     .hero__main-img {
-        max-height: 380px;
-        min-height: 320px;
+        max-height: 280px;
+        min-height: 240px;
     }
     
     .hero__title {
